tooling/nargo_cli/tests/snapshots/execution_failure/brillig_vector_index_offset_overflow/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Brillig function call isn't properly covered by a manual constraint
   ┌─ src/main.nr:18:14
   │
18 │     unsafe { get(v) }
   │              ------ This Brillig call's inputs and its return values haven't been sufficiently constrained. This should be done to prevent potential soundness vulnerabilities
   │
   = Call stack:
     1: main
             at src/main.nr:18:14

error: Assertion failed: Index out of bounds
   ┌─ src/main.nr:12:5
   │
12 │     v[4294967295]
   │     -------------
   │
   = Call stack:
     1: main
             at src/main.nr:18:14
     2: get
             at src/main.nr:12:5

Failed assertion
