tooling/nargo_cli/tests/snapshots/execution_failure/brillig_vector_index_offset_overflow/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 4294967295 is out of bounds for the array of length 3
   ┌─ src/main.nr:12:5
   │
12 │     v[4294967295]
   │     -------------
   │

Error interpreting main function
